use jdk 8